tests/idris2/error/perror034/Error.idr
unnamed : ()
unnamed = (Nat) -> Nat

named : ()
named = (arg : Nat) -> Nat
